--- a/Maui/SimpleWeather.Maui/Location/LocationSearchPage.xaml
+++ b/Maui/SimpleWeather.Maui/Location/LocationSearchPage.xaml
@@ -37,7 +37,7 @@
                 </Grid.ColumnDefinitions>
                 <Image
                     Grid.Column="0"
-                    Margin="12,0"
+                    Margin="16,0"
                     Aspect="AspectFit"
                     BackgroundColor="Transparent"
                     HorizontalOptions="Start"
@@ -62,6 +62,7 @@
                     android:Entry.ImeOptions="Search"
                     Background="{x:Null}"
                     ClearButtonVisibility="WhileEditing"
+                    ios:Entry.CursorColor="{StaticResource AppAccentColor}"
                     Keyboard="Text"
                     Placeholder="{x:Static res_strings:Resources.location_search_hint}"
                     PlaceholderColor="{AppThemeBinding Light={StaticResource LightOnBackground},
@@ -97,10 +98,6 @@
             Grid.Row="2"
             BackgroundColor="Transparent"
             VerticalOptions="FillAndExpand">
-            <Grid.GestureRecognizers>
-                <TapGestureRecognizer Tapped="BackButton_Tapped" />
-                <ClickGestureRecognizer Clicked="BackButton_Clicked" />
-            </Grid.GestureRecognizers>
             <Border
                 BackgroundColor="Transparent"
                 IsVisible="{Binding Locations, Converter={StaticResource collectionBooleanConverter}}"
