--- a/Maui/SimpleWeather.Maui/Setup/SetupLocationsPage.xaml
+++ b/Maui/SimpleWeather.Maui/Setup/SetupLocationsPage.xaml
@@ -22,9 +22,16 @@
     </ContentPage.Resources>
 
     <Grid>
-        <VerticalStackLayout HorizontalOptions="FillAndExpand" VerticalOptions="Center">
+        <Grid VerticalOptions="Center">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
             <localControls:ViewBox
                 x:Name="AppLogo"
+                Grid.Row="0"
                 Margin="0,8,0,36"
                 MaximumHeightRequest="72"
                 MinimumHeightRequest="32">
@@ -40,37 +47,45 @@
             </localControls:ViewBox>
             <Frame
                 x:Name="SearchBar"
+                Grid.Row="1"
                 Margin="16,8"
+                MaximumWidthRequest="1080"
+                HorizontalOptions="FillAndExpand"
                 Padding="8"
                 BackgroundColor="{AppThemeBinding Light={StaticResource LightSecondaryContainer},
                                                   Dark={StaticResource DarkSecondaryContainer}}"
                 HasShadow="False"
-                HorizontalOptions="Fill"
                 IsEnabled="{x:Bind not LocationSearchViewModel.IsLoading, Mode=OneWay}"
-                MaximumWidthRequest="1080">
+                SizeChanged="SearchBar_SizeChanged">
                 <Frame.GestureRecognizers>
                     <TapGestureRecognizer Tapped="SearchBar_Tapped" />
                     <ClickGestureRecognizer Clicked="SearchBar_Clicked" />
                 </Frame.GestureRecognizers>
                 <Frame.Content>
-                    <HorizontalStackLayout VerticalOptions="Center">
-                        <Image Margin="4">
+                    <Grid VerticalOptions="Center">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+                        <Image Grid.Column="0" Margin="4">
                             <Image.Source>
                                 <maticons:MaterialIcon Symbol="Search" Color="{AppThemeBinding Light={StaticResource LightOnSecondaryContainer}, Dark={StaticResource DarkOnSecondaryContainer}}" />
                             </Image.Source>
                         </Image>
                         <Label
+                            Grid.Column="1"
                             Margin="22,0,0,0"
                             FontSize="Default"
                             Text="{x:Static res_strings:Resources.setup_location_prompt}"
                             TextColor="{AppThemeBinding Light={StaticResource LightOnSecondaryContainer},
                                                         Dark={StaticResource DarkOnSecondaryContainer}}"
                             VerticalOptions="Center" />
-                    </HorizontalStackLayout>
+                    </Grid>
                 </Frame.Content>
             </Frame>
             <Button
                 x:Name="GPSButton"
+                Grid.Row="2"
                 Margin="0,10"
                 BackgroundColor="{AppThemeBinding Light={StaticResource LightSecondaryContainer},
                                                   Dark={StaticResource DarkSecondaryContainer}}"
@@ -91,10 +106,11 @@
             </Button>
             <ActivityIndicator
                 x:Name="LoadingRing"
+                Grid.Row="3"
                 Margin="10"
                 IsRunning="{x:Bind LocationSearchViewModel.IsLoading, Mode=OneWay}"
                 Color="{AppThemeBinding Light={StaticResource LightOnPrimary},
                                         Dark={StaticResource DarkOnSurface}}" />
-        </VerticalStackLayout>
+        </Grid>
     </Grid>
 </local:BaseSetupPage>
